# jules-from-gitlab-issues

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  read_pr_comments.py  update_jules_client_feedback.py
.github/workflows/: ci-cd.yml  main.yml
src/: config.py  main.py
src/core/: database.py  github_client.py  gitlab_client.py  jules_client.py
src/logic/: pr_sync.py  task_monitor.py
src/utils/: logger.py
tasks/: ui_analysis_instructions.md
tests/: reproduce_issue.py  test_clients.py  test_coverage.py  test_feature_attachments.py  test_infra.py  test_logic.py  test_main_script.py  test_pr_rebase_logic.py  test_sync_logic.py
tests/logic/: test_flow_e.py
tests/performance/: benchmark_github_client_optimization.py  benchmark_monitor.py  benchmark_n_plus_1.py  benchmark_pr_sync.py
tests/security/: test_jules_client_logging.py
